# cassowary

./: .cvsignore  ANNOUNCE  ANNOUNCE.in  AUTHORS  COPYING  COPYRIGHT  ChangeLog  GTL-0.3.1-distribution.patch  GTL.spec.in  IMPORTANT  LICENSE  Makefile.am  NEWS  README  README.in  THANKS  VERSION  acconfig.h  autogen.sh  cassowary-both.spec.in  cassowary-nofd.spec.in  cassowary-nofd.spec2.in  cassowary.spec  cassowary.spec.in  config.h.in  configure  configure.in  hierarchy-notes.cc  libtool  proposal-edit-constraints.txt  timings
CassowaryForGWT/: .classpath  .project  TestApp-compile.cmd  TestApp-shell.cmd  TestApp.launch
CassowaryForGWT-QuadDemo/: .classpath  .project  QuadDemo-compile.cmd  QuadDemo-shell.cmd  QuadDemo.launch
Java-Eclipse Project/: .classpath  .project
benchmarks/: README-performance  benchmarks.7-jan-2001  new-benchmarks.10-mar-2001  new-java-benchmarks.11-mar-2001  new-java-benchmarks.11-mar-2001.xls  randomtest.st  scwm-benchmarks  tests.csv
c++/: .cvsignore  CHANGES  Cassowary.h  Cl.h  ClAbstractVariable.cc  ClAbstractVariable.h  ClBug0.cc  ClBug1.cc  ClBug2.cc  ClC.cc  ClC.h  ClCTest.c  ClConstraint.cc  ClConstraint.h  ClConstraintHash.h  ClDummyVariable.cc  ClDummyVariable.h  ClEditConstraint.h  ClEditOrStayConstraint.h  ClErrors.h  ClFDBinaryOneWayConstraint.cc  ClFDBinaryOneWayConstraint.h  ClFDConnectorVariable.cc  ClFDConnectorVariable.h  ClFDConstraint.h  ClFDSolver.cc  ClFDSolver.h  ClFDTests.cc  ClFDVariable.cc  ClFDVariable.h  ClFloatVariable.cc  ClFloatVariable.h  ClLeakTest.cc  ClLinearConstraint.h  ClLinearEquation.h  ClLinearExpression.cc  ClLinearExpression.h  ClLinearExpression_fwd.h  ClLinearInequality.h  ClMap.h  (+67 more)
c++/ccc/: ccc.dsp  ccc.dsw
c++/demos/: .cvsignore  ClBoundedQuadDemo.cpp  makefile.b32  makefile.g95  makefile.nt  makefile.sc  makefile.unx  minimal.rc
c++/qdemos/: .cvsignore  DraggableBox.h  Makefile  Makefile.hello  QuadDemo.cc  QuadDemoWindow.cc  QuadDemoWindow.h  README  hello.cc  hello.h  hello.pro  main.cc  main.cpp
docs/: Makefile.am
guile/: .cvsignore  Makefile  Makefile.am  Makefile.linux  README  cassowary_scm-procedures.txt  cassowary_scm-variables.txt  cassowary_scm.cc  cassowary_scm.h  cassowary_scm.hpp  cassowary_scm.sgml  cl-snarf.h  cltests.scm  scwm-snarf.h
guile/doc/: Makefile.am  cassowary_scm.sgml
guile/doc/src/: Makefile.am  ref-concepts-intro.sgml  ref-header.sgml  ref-hooks-intro.sgml  ref-proc-bygroup-intro.sgml  ref-vars-intro.sgml
java/: .cvsignore  CL.java  CLASSPATH  CN.java  ClAbstractVariable.java  ClConstraint.java  ClDouble.java  ClDummyVariable.java  ClEditConstraint.java  ClEditInfo.java  ClEditOrStayConstraint.java  ClErrors.java  ClLinearConstraint.java  ClLinearEquation.java  ClLinearExpression.java  ClLinearInequality.java  ClObjectiveVariable.java  ClParseTest.java  ClPoint.java  ClReader.cup  ClReader.lex  ClSimplexSolver.java  ClSlackVariable.java  ClStayConstraint.java  ClStrength.java  ClSymbolicWeight.java  ClTableau.java  ClTestColumns.java  ClTests  ClTests.java  ClVariable.java  ExCLConstraintNotFound.java  ExCLError.java  ExCLInternalError.java  ExCLNonlinearExpression.java  ExCLNotEnoughStays.java  ExCLNotEnoughtStays.java  ExCLRequiredFailure.java  ExCLTooDifficult.java  Makefile  (+11 more)
java/cda/: .cvsignore  Makefile.am  Makefile.in  makefile  todo
java/cda/Component/: CDA_G.java  CircleCC.java  ConstrComponent.java  EditConstantList.java  LineCC.java  MidpointLineCC.java  RectangleCC.java  SelPoint.java
java/cda/Constraint/: AboveConstraint.java  AdjacencyConstraint.java  AlignmentConstraint.java  AnchorConstraint.java  BelowConstraint.java  ColocationConstraint.java  Constraint.java  LeftOfConstraint.java  RightOfConstraint.java
java/cda/Interface/: ConstraintBtns.java  ConstraintBtnsActionListener.java  DPKeyListener.java  DPMouseMotionListener.java  DrawPanel.java  ImageButton.java  ImageButtonImageObserver.java  MainPanel.java  MainPanelComponentListener.java  PlaceBtns.java  PlaceBtnsActionListener.java
java/cda/Main/: Main.java  MainComponentListener.java
java/cda/classes/: run.html
java/classes/: .cvsignore
java/demos/: .cvsignore  DraggableBox.java  Makefile  Makefile.am  Makefile.in  Makefile.in.linux  QuadDemo.java  quaddemo.htm
java/xml-unparsed/: CL.java.xml  ClAbstractVariable.java.xml  ClConstraint.java.xml  ClDouble.java.xml  ClDummyVariable.java.xml  ClEditConstraint.java.xml  ClEditInfo.java.xml  ClEditOrStayConstraint.java.xml  ClLinearConstraint.java.xml  ClLinearEquation.java.xml  ClLinearExpression.java.xml  ClLinearInequality.java.xml  ClObjectiveVariable.java.xml  ClParseTest.java.xml  ClPoint.java.xml  ClSimplexSolver.java.xml  ClSlackVariable.java.xml  ClStayConstraint.java.xml  ClStrength.java.xml  ClSymbolicWeight.java.xml  ClTableau.java.xml  ClTestColumns.java.xml  ClTests.java.xml  ClVariable.java.xml  ExCLConstraintNotFound.java.xml  ExCLError.java.xml  ExCLInternalError.java.xml  ExCLNonlinearExpression.java.xml  ExCLNotEnoughStays.java.xml  ExCLRequiredFailure.java.xml  ExCLTooDifficult.java.xml  Set.java.xml  Timer.java.xml  Yylex.java.xml  parser.java.xml  sym.java.xml  testClLinearExpression.java.xml  testClStrength.java.xml
js/: CL.js  ClConstraint.js  ClEditInfo.js  ClLinearConstraint-test.js  ClLinearConstraint.js  ClLinearExpression-test.js  ClLinearExpression.js  ClPoint-test.js  ClPoint.js  ClSimplexSolver-test.js  ClSimplexSolver.js  ClStrength-test.js  ClStrength.js  ClSymbolicWeight-test.js  ClSymbolicWeight.js  ClTableau-test.js  ClTableau.js  ClTests.js  ClVariable-test.js  ClVariable.js  ExCLError.js  jshashtable-2.1-gjb.js  quaddemo.html  quaddemo.js
local/: Casso-Qoca-diffs  POST-ANNOUNCE-TO  SAMPLE-ANNOUNCE  TODO  hierarchy-notes.cc  new-dist-copy  release-procedure
papers/: cassowary-affiliates.ppt  cassowary-performance.xls
parser/: python-grammar
python/: .cvsignore  README  bench.py  cassowary.i  cassowary.py.diff  demo-nocns.py  demo.py
scripts/: convert-ids  ids-to-upper  recreate-symlinks  run-benchmarks  run-new-benchmarks  run-other-benchmarks
smalltalk/: CASSO-README  (+8 more)
(+328 files in other folders)
