## $Id$
## Process this file with automake to create Makefile.in

SUBDIRS=demos cda

java_JAVA = \
	ClAbstractVariable.java \
	ClDummyVariable.java \
	ClObjectiveVariable.java \
	ClSlackVariable.java \
	ClConstraint.java \
	ClEditConstraint.java \
	ClEditInfo.java \
	ClEditOrStayConstraint.java \
	ClLinearConstraint.java \
	ClLinearEquation.java \
	ClLinearExpression.java \
	ClLinearInequality.java \
	ClStayConstraint.java \
	ClStrength.java \
	ClSymbolicWeight.java \
	ClVariable.java \
	ClPoint.java \
	ClDouble.java \
	ClTableau.java \
	ClSimplexSolver.java \
	ExCLConstraintNotFound.java \
	ExCLError.java \
	ExCLInternalError.java \
	ExCLNonlinearExpression.java \
	ExCLNotEnoughStays.java \
	ExCLRequiredFailure.java \
	ExCLTooDifficult.java \
	CL.java \
	Set.java \
	Timer.java
